loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:12: error: not found: value True
while(True){
      ^